<resources>
    <string name="app_name">iBall Baton</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>

    <string name="btn_clear">Clear</string>
    <string name="btn_login">Login</string>
    <string name="et_password_hint">Admin Password</string>
    <string name="tv_iball_baton_nrouter">iBall Baton\nRouter</string>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_trffic">Traffic</string>

    <string name="action_about">About</string>
    <string name="string_donation">Donation: <a href="https://paypal.me/ShanuDey">Buy me a coffee</a></string>
    <string name="string_source">Source: <a href="https://github.com/ShanuDey/Android_TorchLight">iBall Baton Router App</a></string>
    <string name="string_author">Author: <a href="https://github.com/ShanuDey">Shanu Dey</a></string>
</resources>
